# ester-clean-code

./: .coveragerc  .dockerignore  .editorconfig  .ester_env_state.json  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  Dockerfile  ESTER_LAUNCHER.bat  LICENSE-CE  LICENSE-COMMERCIAL  MACHINE_ENTRY.md  Makefile  Makefile 1  Makefile — быстрые цели  NOTICE  PROOF_OF_CLOSURE.md  README.md  README.txt  README_BIND_FIX.md  README_PARTIAL.txt  README_RELEASE.md  README_fix.md  README_hotfix.txt  README_jwt_hotfix.txt  README_ps5_wrappers_fix.txt  README_pure_ps.txt  RELEASING.md  SECURITY.md  THIRD-PARTY-LICENSES  TRADEMARK.md  TRADEMARKS.md  _cyr_files_now.txt  (+198 more)
.githooks/: pre-commit
.patches/: patch_20251226_tg_lock_context_v2.py
ESTER/: __init__.py  catalog.json  json_unicode_adapter.py  jwt_glue_routes.py
_patch3/: __init__.py  __init__.pyc.2377244634256  register_all.py
_rag_test_docs/: a.txt  b.md
alertmanager/: alertmanager.yml.tmpl
app_plugins/: after_response_sanity.py  after_response_sanity2.py  autoregister_compat_pydantic.py  autoregister_messaging.py  boot_log.py  compat_loop_status.py  compat_route_endpoints.py  ester_memory_flow_http.py  ester_thinking_trace_http.py  ester_will_unified_guard.py  lan_hub_autoconfig.py  register_messaging.py
asgi/: app_main.py  asgi_to_wsgi.py  otel_instrumentation.py  security_headers.py  synergy_api_v2.py
bootstrap/: jwt_setup.py
bridges/: deterministic_sensors.py  internet_access.py  messenger_bridge.py  persona_detector.py  style_engine.py  telegram_adapter.py  web_browser.py  whatsapp_adapter.py
ci/: check_dod.py  check_dod.sh  memory_facade_lint.py
cloud/: __init__.py  gdrive_adapter.py  s3_adapter.py
compat/: __init__.py
config/: author_voice.example.yaml  dreams_rules.yaml  ester_will.example.env  export_whitelist.txt  feature_flags.yaml  hybrid_search.example.env  memory.example.env  messaging.example.env  messaging.yaml  messaging_policies.yaml  messaging_rules.example.yaml  messaging_rules.yaml  mvp_agents.json  no_network_allowlist.json  nudges.yaml  payment_links.env  privacy_policies.yaml  proactive_rules.yaml  rulehub.yaml  (+9 more)
(+3509 files in other folders)
